alignment fix

--- a/resources/scss/archive/ArchiveOverview.scss
+++ b/resources/scss/archive/ArchiveOverview.scss
@@ -25,6 +25,7 @@
                     cursor: pointer;
                 }
                 .select-name{
+                    margin-left: 12px;
                     display: flex;
                     align-items: center;
                     gap: 13px;
@@ -46,7 +47,7 @@
                     display: flex;
                     flex-direction: row;
                     align-items: center;
-                    width: 244px;
+                    width: 212px;
                 }
             }
             .table-content{
